fixed a few display bugs

--- a/week1-day2-html-css/css/style.css
+++ b/week1-day2-html-css/css/style.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #efeee7;
-	font-family: "Georgia",Times New Roman, Times, Serif;
+	font-family: "Georgia","Times New Roman", Times, Serif;
 	color: #333333;
 	margin: 0px;
 	padding: 0px;
